clusters/minikube/pihole/resources-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
spec:
  template:
    spec:
      containers:
        - name: pihole
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
